deploy/kubernetes/base/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerce-payment
  namespace: commerce
  labels:
    app.kubernetes.io/name: distributed-commerce
    app.kubernetes.io/component: payment
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: distributed-commerce
    app.kubernetes.io/component: payment
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
      appProtocol: https
